完成照片记录读取功能，未能完成修改笔记照片删除问题

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,8 +29,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.connor.activity.AddNoteActivity" >
-        </activity>
+        <activity android:name="com.connor.activity.AddNoteActivity" />
+        <activity android:name="com.connor.activity.ViewNote" />
+        <activity android:name="com.connor.activity.EditNote"/>
     </application>
 
 </manifest>
