w已经完成基本功能，缺listview从顶部增加

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name="com.connor.activity.AddNoteActivity" />
         <activity android:name="com.connor.activity.ViewNote" />
         <activity android:name="com.connor.activity.EditNote"/>
+        <activity android:name="com.connor.activity.BooksNotes"/>
     </application>
 
 </manifest>
