最后一次提交，闹钟有点BUG，处理一下就可以的了

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,8 +31,14 @@
         </activity>
         <activity android:name="com.connor.activity.AddNoteActivity" />
         <activity android:name="com.connor.activity.ViewNote" />
-        <activity android:name="com.connor.activity.EditNote"/>
-        <activity android:name="com.connor.activity.BooksNotes"/>
+        <activity android:name="com.connor.activity.EditNote" />
+        <activity android:name="com.connor.activity.BooksNotes" />
+
+        <receiver android:name="com.connor.receiver.AlarmReceiver" >
+            <intent-filter>
+                <action android:name="AlarmReceiver" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
